# rogsolv

./: CMakeLists.txt  README.md
src/: bkviewer.cpp  box.cpp  box.h  buffer.cpp  buffer.h  ci.cpp  ci.h  difference_scheme.cpp  difference_scheme.h  first_scheme.cpp  first_scheme.h  init_cond.h  limiters.h  manager.cpp  manager.h  mapper.cpp  mapper.h  matrix.h  mypow.cpp  mypow.h  paraview.cpp  printer.h  solver.cpp  timer.cpp  timer.h  tvd_scheme.cpp  tvd_scheme.h  tvd_scheme_after.h  vel_grid.cpp  vel_grid.h  vel_grid_after.h  writer.cpp  writer.h
src/base/: auxiliary.h  init_cond.h  vector3.h
src/ci/: ci.cpp  ci.hpp  ci_impl.hpp  korobov.hpp  replace.sh  select_xilm.hpp  sse.hpp  sse_impl.hpp  v.hpp
src/ci_griders/: korobov.cpp  korobov.h
src/containers/: box.cpp  box.h  buffer.cpp  buffer.h  mapper.cpp  mapper.h  matrix.h  vel_grid.cpp  vel_grid.h  vel_grid_impl.h  walls.h
src/schemes/: difference_scheme.cpp  difference_scheme.h  first_scheme.cpp  first_scheme.h  limiters.h  tvd_scheme.cpp  tvd_scheme.h  tvd_scheme_impl.h
src/workers/: ci_grider.h  manager.cpp  manager.h  printer.cpp  printer.h  randomizer.h  schemer.cpp  schemer.h  timer.cpp  timer.h  writer.cpp  writer.h
src/writers/: bkviewer.cpp  bkviewer.h  paraview.cpp  paraview.h  writer.cpp  writer.h
tools/matplot/: f_plot.py
tools/paraview/: average.py  eta.py  extrapolate.sh  kappa.py  poise_flow.py
tools/shell/: extrapolate.sh  get_data.sh  start.sh
